--- a/app/src/PassScanner/AndroidManifest.xml
+++ b/app/src/PassScanner/AndroidManifest.xml
@@ -1,6 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application>
-        <activity android:name="org.covid19india.android.safepassageindia.passscanner.MenuActivity"></activity>
+        <activity android:name="org.covid19india.android.safepassageindia.passscanner.ResultActivity"></activity>
+        <activity android:name="org.covid19india.android.safepassageindia.passscanner.ScannerActivity" />
+        <activity android:name="org.covid19india.android.safepassageindia.passscanner.MenuActivity" />
     </application>
+
 </manifest>
