--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".BroadcastReceiverService"
+            android:enabled="true"
+            android:exported="true"></service>
 
         <activity android:name=".LoginActivity">
             <intent-filter>
