--- a/app/src/PassIssuer/AndroidManifest.xml
+++ b/app/src/PassIssuer/AndroidManifest.xml
@@ -1,6 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <activity android:name="org.covid19india.android.safepassageindia.passissuer.MenuActivity"></activity>
+        <activity
+            android:name="org.covid19india.android.safepassageindia.passissuer.PassIssuerListActivity"
+            android:label="@string/title_activity_pass_issuer_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name="org.covid19india.android.safepassageindia.passissuer.OrgFormActivity" />
     </application>
+
 </manifest>
