--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,12 +17,26 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build PassScanner
-      run: ./gradlew assemblePassScanner
-    - name: upload artifact to Firebase App Distribution
+    - name: Build all apps
+      run: ./gradlew assembleRelease
+    - name: upload PassScanner to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
       with:
-        appId: ${{secrets.FIREBASE_APP_ID}}
+        appId: ${{secrets.FIREBASE_APP_ID_SCANNER}}
         token: ${{secrets.FIREBASE_TOKEN}}
         groups: vics
         file: app/build/outputs/apk/PassScanner/release/app-PassScanner-release-unsigned.apk
+    - name: upload PassUser to Firebase App Distribution
+      uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
+      with:
+        appId: ${{secrets.FIREBASE_APP_ID_USER}}
+        token: ${{secrets.FIREBASE_TOKEN}}
+        groups: vics
+        file: app/build/outputs/apk/PassUser/release/app-PassUser-release-unsigned.apk
+    - name: upload PassIssuer to Firebase App Distribution
+      uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
+      with:
+        appId: ${{secrets.FIREBASE_APP_ID_ISSUER}}
+        token: ${{secrets.FIREBASE_TOKEN}}
+        groups: vics
+        file: app/build/outputs/apk/PassIssuer/release/app-PassIssuer-release-unsigned.apk
