--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build all apps
-      run: ./gradlew assembleRelease
+      run: ./gradlew assembleDebug
     - name: upload PassScanner to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
       with:
