--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,25 +18,25 @@ jobs:
       with:
         java-version: 1.8
     - name: Build all apps
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleRelease
     - name: upload PassScanner to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
       with:
         appId: ${{secrets.FIREBASE_APP_ID_SCANNER}}
         token: ${{secrets.FIREBASE_TOKEN}}
         groups: vics
-        file: app/build/outputs/apk/PassScanner/debug/app-PassScanner-debug.apk
+        file: app/build/outputs/apk/PassScanner/release/app-PassScanner-release.apk
     - name: upload PassUser to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
       with:
         appId: ${{secrets.FIREBASE_APP_ID_USER}}
         token: ${{secrets.FIREBASE_TOKEN}}
         groups: vics
-        file: app/build/outputs/apk/PassUser/debug/app-PassUser-debug.apk
+        file: app/build/outputs/apk/PassUser/release/app-PassUser-release.apk
     - name: upload PassIssuer to Firebase App Distribution
       uses: wzieba/Firebase-Distribution-Github-Action@v1.2.1
       with:
         appId: ${{secrets.FIREBASE_APP_ID_ISSUER}}
         token: ${{secrets.FIREBASE_TOKEN}}
         groups: vics
-        file: app/build/outputs/apk/PassIssuer/debug/app-PassIssuer-debug.apk
+        file: app/build/outputs/apk/PassIssuer/release/app-PassIssuer-release.apk
