--- a/app/src/PassIssuer/AndroidManifest.xml
+++ b/app/src/PassIssuer/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name="org.covid19india.android.safepassageindia.passissuer.MenuActivity"></activity>
+        <activity
+            android:name="org.covid19india.android.safepassageindia.passissuer.MenuActivity"
+            android:label="MenuActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="org.covid19india.android.safepassageindia.passissuer.PassIssuerListActivity"
             android:label="@string/title_activity_pass_issuer_list"
