--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,9 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.2.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.0.0-RC1'
     def camerax_version = "1.0.0-alpha01"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
